[package]
name = "voxelbuilder_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14", features = [ "derive" ] }
cgmath = { version="0.18.0", features = ["serde"]}
serde = { version="1.0.188", features = ["derive"] }
wgpu = "0.17.0"
